/**
 * # Block Node Connections
 * A representation of the configuration for connecting to a set of block nodes.
 *
 * ### Keywords
 * The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT",
 * "SHOULD", "SHOULD NOT", "RECOMMENDED", "MAY", and "OPTIONAL" in this
 * document are to be interpreted as described in
 * [RFC2119](https://www.ietf.org/rfc/rfc2119) and clarified in
 * [RFC8174](https://www.ietf.org/rfc/rfc8174).
 */

syntax = "proto3";

package com.hedera.hapi.network;

option java_package = "com.hedera.node.internal.network.legacy";
// <<<pbj.java_package = "com.hedera.node.internal.network">>> This comment is special code for setting PBJ Compiler java package
option java_multiple_files = true;

/**
 * Configuration for a single block node connection.<br/>
 * This message delivers the information needed to stream blocks to a block node.
 */
message BlockNodeConfig {
    /**
     * The priority of the block node connection.<br/>
     * This field SHALL specify the priority of the block node connection.
     * With the highest priority being 1. All block nodes with priority 1,
     * are considered preferred block nodes and different logic MAY apply to them.
     */
    int32 priority = 1;

    /**
     * The address of the block node.<br/>
     */
    string address = 2;

    /**
     * The port of the block node.<br/>
     */
    int32 port = 3;
}

/**
 * Overall connection configuration for block nodes.<br/>
 *
 * The BlockNodeConnectionInfo message SHOULD encapsulate all the information needed
 * for a consensus node to connect to a set of block nodes and stream blocks.
 */
message BlockNodeConnectionInfo {
    /**
     * A list of block node configurations.<br/>
     * This field SHALL list all block node configurations
     * to which the consensus node SHOULD connect.
     */
    repeated BlockNodeConfig nodes = 1;

    /**
      * The interval in seconds at which to perform reselection
      * of block nodes that the consensus node SHOULD to connect to.<br/>
      * This interval applies to all non-preferred block nodes.
     */
    int32 node_reselection_interval = 2;

    /**
     * The maximum number of simultaneous connections to block nodes.<br/>
     * This field SHALL specify the maximum number of simultaneous connections
     * to block nodes that the consensus node SHOULD maintain.
     * This interval applies to all non-preferred block nodes.
     */
    int32 max_simultaneous_connections = 3;

    /**
     * The size of the batches of block items to be streamed to block nodes.<br/>
     */
    int32 block_item_batch_size = 4;
} 